@@ -4,6 +4,9 @@ Bugs:
 - Strapon can only be put on when not wearing a strapon
 - Split bluff and wait into two skills
 - Make powerful hips allow you to grind from the submissive position
+- Make oral pin require that the opponent is mobile
+- Make Samantha's sexy dance skill use similar skill restrictions
+- Make foot smother require that you are dominant and mobile
 
 1.8.2.9 changelog
 
